@@ -101,7 +101,7 @@
   jfs_debugfs mkfs.jfs fsck.jfs jfs_fscklog jfs_logdump jfs_tune
 
   btrfs btrfsck btrfs-convert btrfs-debug-tree
-  btrfs-map-logical mkfs.btrfs fsck.btrfs
+  btrfs-map-logical mkfs.btrfs fsck.btrfs btrfstune
 
   screen
 
