@@ -1,3 +1,6 @@
+- diskdrake:
+  o keep UUID when formating btrfs (mga#18673)
+
 Version 17.44 - 24 June 2016
 
 - diskdrake:
